--- a/index.html
+++ b/index.html
@@ -23,11 +23,36 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario para ingresar producto</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <form action="">
+                                <fieldset>
+                                    <legend>Complete los campos</legend>
+                                    <label for="">Codigo del producto</label>
+                                    <input type="text">
+                                    <br>
+                                    <label for="">Nombre del producto</label>
+                                    <input type="text">
+                                    <br>
+                                    <label for="">Descripción</label>
+                                    <input type="text">
+                                    <br>
+                                    <label for="">Categoría</label>
+                                    <input type="text">
+                                    <br>
+                                    <label for="">Precio</label>
+                                    <input type="text">
+                                    <br>
+                                    <label for="">Inventario</label>
+                                    <input type="text">
+                                    <br>
+                                    <label for="">Codigo</label>
+                                    <input type="text">
+                                    <br>
+                                </fieldset>
+                            </form>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
