--- a/index.html
+++ b/index.html
@@ -13,94 +13,100 @@
 
 <body>
     <header>
-        <nav class="navbar bg-primary">
+        <nav class="navbar bg-success">
             <div class="container-fluid">
                 <a class="navbar-brand">El Tunel</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Buscar</button>
+                    <button class="btn btn-primary" type="submit">Buscar</button>
                 </form>
             </div>
         </nav>
     </header>
     <div class="container">
         <div class="row">
+            <div class="col-2">
+                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Agregar producto
+                </button><br>
+                <button type="button" class="btn btn-dark">Ventas diarias
+                </button><br>
+                <button type="button" class="btn btn-dark">Infome de ventas</button>
+            </div>
+            <div class="col-10"><div class="row">
 
-        </div>
-        <div class="row">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Launch static backdrop modal
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form action="">
-                                <fieldset>
-                                    <legend>Datos de los productos</legend>
-                                    <div>
-                                        <label style="width: 150px;">Codigo del producto</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <label style="width: 150px;">Nombre del producto</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <label style="width: 150px;">Descripción</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <label style="width: 150px;">Categoría</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <label style="width: 150px;">Precio</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <label style="width: 150px;">Inventario</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <label style="width: 150px;">Código</label>
-                                        <input type="text">
-                                    </div>
-                                    <br>
-                                </fieldset>
-
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary">Ingresar</button>
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="">
+                                    <fieldset>
+                                        <legend>Datos de los productos</legend>
+                                        <div>
+                                            <label style="width: 150px;">Codigo del producto</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Nombre del producto</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Descripción</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Categoría</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Precio</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Inventario</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Código</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                    </fieldset>
+    
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-primary">Ingresar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col">
-                <button class="btn btn-success">Apertura de Caja</button>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-success">Apertura de Caja</button>
+                </div>
+                <div class="col">
+                    <button class="btn btn-danger">Cierre de Caja</button>
+                </div>
             </div>
-            <div class="col">
-                <button class="btn btn-danger">Cierre de Caja</button>
             </div>
         </div>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -108,7 +114,7 @@
 </body>
 
 </html>
-
+<!-- 
 tipo de documento codigo fecha hora
 boleta 01 10/06/2023 15:00
-factura 02 11/06/2023 15:03
+factura 02 11/06/2023 15:03 -->
