--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header>
         <nav class="navbar bg-success">
             <div class="container-fluid">
-                <a class="navbar-brand">El Tunel</a>
+                <a class="navbar-brand">ICONO EMPRESARIAL</a>
+                <a class="navbar-brand">Bazar "El tunel"</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-primary" type="submit">Buscar</button>
@@ -23,18 +24,19 @@
             </div>
         </nav>
     </header>
+    <main>
     <div class="container">
-        <div class="row">
+        <div class="row lista">
             <div class="col-2">
                 <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                 Agregar producto
                 </button><br>
-                <button type="button" class="btn btn-dark">Ventas diarias
+                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal2">Ventas diarias
                 </button><br>
                 <button type="button" class="btn btn-dark">Infome de ventas</button>
             </div>
             <div class="col-10"><div class="row">
-
+                <h1>Bienvenido a la plataforma de administración</h1>
                 <!-- Modal -->
                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                     aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -48,6 +50,64 @@
                                 <form action="">
                                     <fieldset>
                                         <legend>Datos de los productos</legend>
+                                        <div>
+                                            <label style="width: 150px;">Codigo del producto</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Nombre del producto</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Descripción</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Categoría</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Precio</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Inventario</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                        <div>
+                                            <label style="width: 150px;">Código</label>
+                                            <input type="text">
+                                        </div>
+                                        <br>
+                                    </fieldset>
+    
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-primary">Ingresar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade" id="modal2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content" id="modal2">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="">
+                                    <fieldset>
+                                        <legend>Informe de venta</legend>
                                         <div>
                                             <label style="width: 150px;">Codigo del producto</label>
                                             <input type="text">
@@ -108,6 +168,7 @@
         </div>
         
     </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
